--- a/index.html
+++ b/index.html
@@ -4,22 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>responsive-layout</title>
+    <title>js-mail</title>
     <link rel="stylesheet" href="style.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="./style/style.css">
 
     <script type="text/javascript" src="./script/script.js" defer></script>
 
 </head>
 
 <body>
-    <div>
-        <label for="fname">First name:</label><br>
-        <input type="text" id="fname" name="fname" value="John"><br>
-        <label for="lname">Last name:</label><br>
-        <input type="text" id="lname" name="lname" value="Doe"><br><br>
-        <input type="submit" value="Submit">
+    <div id="container">
+        <div>
+            <label>
+                <h2>Controlliamo che la tua e-mail sia presente</h2>
+            </label><br>
+            <input type="text" id="fname" value="Inserisci la tua E-mail"><br>
+            <input type="submit" value="Submit">
+        </div>
     </div>
 </body>
 
