check-mail, true

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>js-mail</title>
-    <link rel="stylesheet" href="style.css">
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -21,8 +21,8 @@
             <label>
                 <h2>Controlliamo che la tua e-mail sia presente</h2>
             </label><br>
-            <input type="text" id="fname" value="Inserisci la tua E-mail"><br>
-            <input type="submit" value="Submit">
+            <input type="text" id="pippo" placeholder="Inserisci la tua E-mail"><br>
+            <button type="button" id="check-mail">Controlla mail</button>
         </div>
     </div>
 </body>
